# efficientnet-pytorch

./: .gitignore  README.md  dataset.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py  transform.py
data/: dataset.csv
utils/: pytorch_util.py
